# ml_utils

./: .gitignore  README.md  data_setup_image.py  engine.py  pyproject.toml  requirements.in  requirements.txt  torchvision_model.py  train.py  utils.py
examples/: examples_usage.py
src/: paths.py
src/models/sample_models/: classification.py
src/pipelines/: base_pipeline.py
src/pipelines/csv_pipelines/: classification.py
src/sample_datasets/: iris_dataset.py
src/utils/: download_kaggle_dataset.py  get_env.py
