[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-platform"
version = "0.1.0"
description = "ML platform"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "kagglehub>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

notebook = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
]

# CLI entry
[project.scripts]
ml-platform = "src.main:app"

# SETUPTOOLS (src layout)
[tool.setuptools.packages.find]
where = ["src"]

# PYTEST
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

# RUFF
[tool.ruff]
line-length = 88
target-version = "py39"

lint.select = ["E", "F", "I", "B", "UP", "N"]
lint.ignore = ["E501"]

fix = true

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
